# lifluct

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
docs/: guide_ai_assistant.md  guide_mcp_tools.md  whitepaper_en.md  whitepaper_ko.md
lifluct/: __init__.py  constants.py  types.py
lifluct/baselines/: __init__.py  dynamic_fee_single.py  lifluct_multi_cell.py  static_cpmm.py
lifluct/cli/: __init__.py  aggregate_results.py  compare_runs.py  export_report_bundle.py  main.py  make_adjudication_report.py  make_report.py  resume_batch.py  run_best_fixed_search.py  run_experiment_grid.py  run_large_grid.py  run_regime_family.py  run_sharded_batch.py  run_simulation.py  run_sweep.py
lifluct/configs/: baseline_dynamic.yaml  baseline_static.yaml  best_fixed_smoke.yaml  best_fixed_testset_highvol.yaml  best_fixed_testset_lowvol.yaml  best_fixed_testset_oraclelag.yaml  best_fixed_testset_sabotage.yaml  best_fixed_trainset.yaml  dynamic_high_vol.yaml  dynamic_oracle_lag.yaml  lifluct_default.yaml  (+14 more)
plugin/: README.md  requirements.txt
tests/: test_adjudication.py  test_adversaries.py  test_aggregate_stats.py  test_attribution.py  test_attribution_modes.py  test_benchmark.py  test_cell.py  test_cluster.py  test_compare.py  test_evolution.py  test_experiment_registry.py  test_failure_modes.py  test_fitness.py  test_frontier.py  test_lysis.py  test_oracle.py  test_orchestration.py  test_phase41_reporting.py  test_retention_modes.py  test_routing.py  test_sharding.py  test_simulation.py  test_validation.py
(+94 files in other folders)
